--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://swedr13.github.io/Final-Portfolio/",
+  "homepage": "https://swedr13.github.io/final",
   "name": "portfolio",
   "version": "0.1.0",
   "private": true,
